--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
 baseURL = "/"
 languageCode= "en-us"
 
-pygmentsstyle="autumn"
-# pygmentsUseClasses = true
+pygmentsCodefences = false
 
 contentDir = "content"
 defaultContentLanguage = "en"
@@ -12,7 +11,6 @@ disableKinds = ["taxonomy", "taxonomyTerm", "sitemap", "robotsTXT"]
 
 # Note that this currently has no effect in Hugo.
 timezone = "America/Los_Angeles"
-
 
 [params]
 # Default page top graphic if not set in page front matter. This is an integer representing the base filename.
