--- a/bench/generators/jekyll/Dockerfile
+++ b/bench/generators/jekyll/Dockerfile
@@ -10,6 +10,7 @@ COPY example_site /example_site
 
 # Install Jekyll and its dependencies
 RUN apk add --update ruby libstdc++ \
+    && apk add ruby-etc \
     && apk add --virtual build-dependencies build-base ruby-dev libffi-dev \
     && gem install bundler --no-ri --no-rdoc \
     && bundle install --gemfile=example_site/Gemfile \
