--- a/bench/generators/zola/Dockerfile
+++ b/bench/generators/zola/Dockerfile
@@ -6,7 +6,7 @@ FROM jdkato/hyperfine
 # $ docker run --rm hyperfine-zola 25
 
 # Install Zola and its dependencies
-ARG repo="@testing http://dl-3.alpinelinux.org/alpine/edge/testing"
+ARG repo="@testing http://dl-3.alpinelinux.org/alpine/edge/community"
 
 RUN echo $repo >> /etc/apk/repositories && \
     apk add --no-cache --update zola@testing
